NOREF: Add nginx-config role to upload custom html welcome file

--- a/inventories/uat/group_vars/nginx_servers.yml
+++ b/inventories/uat/group_vars/nginx_servers.yml
@@ -1,2 +1,8 @@
 ---
 # UAT-specific nginx configuration
+
+nginx_config_upload_html_enable: true
+nginx_config_upload_html:
+  - src: ../inventories/uat/files/nginx/www/index.html
+    dest: /usr/share/nginx/html/index.html
+    backup: true
